bynkc/tests/fixtures/positive/164_is_refined_check/src/demo.karn
commons demo

type Quantity = Int where InRange(1, 100)

fn valid(n: Int) -> Bool {
  n is Quantity
}
