bynkc/tests/fixtures/negative/128_is_unknown_name/src/demo.karn
commons demo

fn f(n: Int) -> Bool {
  n is Nope
}
